--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jszip": "^3.4.0",
     "clsx": "^2.1.1",
     "heic2any": "^0.0.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
     "react": "^18.3.1",
